--- a/01_開発/01_企画/ITコンサルタント/01_コスト試算（見積）/03_ファンクションポイント法.md
+++ b/01_開発/01_企画/ITコンサルタント/01_コスト試算（見積）/03_ファンクションポイント法.md
@@ -1,6 +1,6 @@
 # ◆ファンクションポイント法
 
-ファンクションポイント法（Function Point Analysis）について、詳細に説明します。これはソフトウェアの機能規模を測定し、工数見積もりに活用する標準的な手法です。
+ファンクションポイント法（Function Point Analysis）について、整理します。これはソフトウェアの機能規模を測定し、工数見積もりに活用する標準的な手法です。
 
 ---
 ## 1. ファンクションポイント法の基本概念
