--- a/01_開発/01_企画/ITコンサルタント/01_コスト試算（見積）/05_リソースバッファ設定への影響要素.md
+++ b/01_開発/01_企画/ITコンサルタント/01_コスト試算（見積）/05_リソースバッファ設定への影響要素.md
@@ -1,6 +1,6 @@
 # ◆リソースバッファの設定
 
-リソースバッファの設定目安について、詳しく説明します。キーパーソンの休暇・病気対応におけるリソースバッファは、プロジェクトのリスクマネジメントにおいて極めて重要です。
+リソースバッファの設定目安について、整理します。キーパーソンの休暇・病気対応におけるリソースバッファは、プロジェクトのリスクマネジメントにおいて極めて重要です。
 
 ---
 
