--- a/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
+++ b/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
@@ -112,14 +112,26 @@
   - Ctrl+;（日付入力）
   - Alt+=（オートSUM）
   - F12（名前を付けて保存）
-
-**13:00-15:00: 検索・フィルタ操作**
 - データ検索:
   - Ctrl+F/H（検索・置換）
   - Ctrl+Shift+L（フィルタ）
+- 行、列、セルの挿入、削除、コピー、移動
+  - Ctrl+Shif+ +（挿入）
+  - Ctrl+ -（削除）
+  - Ctrl+c → Ctrl+Shif+**+**（コピー）
+  - Ctrl+x → Ctrl+Shif+**+**（移動）
+
+**13:00-15:00: 検索・フィルタ操作**
+- フィルター操作:
+  - フィルター表示/非表示
+
+- 図形操作:
+  - 図形追加
+  - 図形背景色、罫線など設定
+  - 前後順、グループ化
+
 - **実践演習**:
-  - 監視ログからのデータ抽出
-  - フィルタを使ったレポート作成
+  - 表の行、列追加、コピー、削除、移動操作
 
 ---
 
