--- a/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
+++ b/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
@@ -116,8 +116,8 @@
   - Ctrl+F/H（検索・置換）
   - Ctrl+Shift+L（フィルタ）
 - 行、列、セルの挿入、削除、コピー、移動
-  - Ctrl+Shif+ +（挿入）
-  - Ctrl+ -（削除）
+  - Ctrl+Shif+**+**（挿入）
+  - Ctrl+**-**（削除）
   - Ctrl+c → Ctrl+Shif+**+**（コピー）
   - Ctrl+x → Ctrl+Shif+**+**（移動）
 
