--- a/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
+++ b/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
@@ -136,55 +136,38 @@
 ---
 
 ### **Day 5（2月12日）2時間: Linux+Excel連携①**
-**10:00-11:00: Linuxデータ抽出**
+**10:00-12:00: データ操作・算式**
 - 前日内容復習:
-- 実践シナリオ:
-  - ログファイルから特定条件のデータ抽出
-  - CSV形式での保存
-  - ファイルの整理と命名規則
-- コマンド例:
-  ```bash
-  grep "CRITICAL" app.log > critical_errors.csv
-  ```
-
-**11:00-12:00: Excelでのデータ加工**
-- CSVファイルのインポート
-- データの整形と書式設定
-- 簡単な集計と可視化
+- 書式コピー:
+  - Ctrl+c（コピー元）→ブラシ（マウス選択）→コピー先
+- 行、列選択
+  - Shift+space（単行選択）→ Shift+↑ / ↓（複数行選択）
+  - Ctrl+space（列選択）→ Shift+→ / ←（複数列選択）
+- 行・列の入り変えコピー
+- 算式
+  - 文字列の結合（ & ）
+  - IF文
+- CSVファイル（Linuxのログや、テーブルデータなど想定※）の読み込み
 
 ---
 
 ### **Day 6（2月13日）2時間: Linux+Excel連携②**
 **10:00-11:00: 実践演習**
-- 前日内容復習:
-- 統合シナリオ演習:
-  ```
-  1. Linux: 複数ログファイルからエラーを抽出
-  2. 抽出データをCSVに変換
-  3. Excel: CSVを開き、日付順にソート
-  4. 重大度別に色分け表示
-  ```
-- トラブルシューティング:
-  - ファイルが見つからない場合
-  - 文字化けの対応
+- 研修内容全体の復習:
 
-**11:00-12:00: ファンクションキー総復習**
-- F1-F12の主要機能確認
-- Excel/LinuxでのFキー活用法
-- ショートカット早見表の使い方
+
+**11:00-12:00: 最終日演習の設計準備**
+- 演習項目の洗い出し
+- 演習データ準備
 
 ---
 
 ### **Day 7（2月16日）2時間: 総合評価・OJT準備**
 **10:00-11:00: 実技試験**
-- 前日内容復習:
-- 簡単な実技テスト（30分）:
-  - Linux: ログファイルからデータ抽出
-  - Excel: 抽出データのレポート化
+- 演習実施:
 - 評価基準:
   - 正確性
   - 効率性（ショートカット使用）
-  - セキュリティ遵守
 
 **11:00-12:00: フィードバックとOJT準備**
 - テスト結果のフィードバック
