--- a/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
+++ b/01_開発/77_新人教育/新人基礎スキル集中研修計画.md
@@ -156,15 +156,15 @@
 - 研修内容全体の復習:
 
 
-**11:00-12:00: 最終日演習の設計準備**
-- 演習項目の洗い出し
-- 演習データ準備
+**11:00-12:00: 最終日総合実技演習の設計・準備**
+- 総合実技演習項目の洗い出し
+- 総合実技演習データ準備
 
 ---
 
 ### **Day 7（2月16日）2時間: 総合評価・OJT準備**
 **10:00-11:00: 実技試験**
-- 演習実施:
+- 総合実技演習実施:
 - 評価基準:
   - 正確性
   - 効率性（ショートカット使用）
@@ -200,8 +200,8 @@
 
 ### **【成果物と評価】**
 - **毎日**: 小テスト（理解度確認）
-- **Day 7**: 総合実技試験
-- **最終成果物**: 監視レポートサンプル（Linux+Excel連携）
+- **Day 7**: 総合実技演習
+- **最終成果物**: 総合実技演習レポート
 
 ### **【今後、OJTでさらに強化する内容】**
 
