--- a/03_セキュリティと監査/10_サイバーセキュリティ.md
+++ b/03_セキュリティと監査/10_サイバーセキュリティ.md
@@ -489,4 +489,234 @@
 単にWAFを入れれば安全になるわけではありません。
 
 ---
+---
+
+# ◆ サイバーハイジーン（Cyber Hygiene）
+
+**サイバーハイジーン**（**Cyber Hygiene**）とは、
+
+> 「高度な対策の前に、必ず継続的に実施すべき基本的防御習慣」
+
+を意味します。
+
+高度なSOCやゼロトラストよりも先に、まず徹底すべき“基礎体力”です。
+
+---
+
+## ■ サイバーハイジーンとは
+
+米国では CISA（米国サイバーセキュリティ庁）や
+NIST が継続的に強調しています。
+
+特徴：
+
+* 高度ではない
+* 難しくない
+* しかし「徹底が難しい」
+* 実はインシデントの80%以上を防げる
+
+---
+
+## ■ 必須のサイバーハイジーン 10項目（実務レベル）
+
+---
+
+## ① 資産管理（Asset Management）
+
+### なぜ重要か
+
+守る対象が分からなければ守れない。
+
+### 必須作業
+
+* サーバ・端末・ネットワーク機器一覧化
+* SaaS利用状況棚卸
+* ソフトウェア一覧（SBOM）
+* クラウドリソース棚卸
+
+### 実務ポイント
+
+* CMDB運用
+* 月次更新
+* 未承認機器の遮断（NAC）
+
+---
+
+## ② パッチ管理（Patch Management）
+
+### 目的
+
+既知脆弱性を塞ぐ
+
+### 必須作業
+
+* OS月次更新
+* ミドルウェア更新
+* 緊急パッチ（48時間以内）
+* EOL製品排除
+
+### 実務基準
+
+* 重大（CVSS 9以上）→即時対応
+* 重要→1週間以内
+
+---
+
+## ③ 強固な認証
+
+### 必須作業
+
+* 全管理者MFA必須
+* 長期パスワード禁止
+* 使い回し禁止
+* 特権ID分離
+
+### 重要概念
+
+* ゼロトラスト
+* 最小権限原則
+
+---
+
+## ④ アクセス制御（最小権限）
+
+### 必須作業
+
+* ロール定義
+* 不要権限削除
+* 退職者即時削除
+* 四半期棚卸
+
+---
+
+## ⑤ バックアップ
+
+### 目的
+
+ランサムウェア対策
+
+### 必須作業
+
+* 3-2-1ルール
+* オフライン保存
+* 定期リストア試験
+
+---
+
+## ⑥ ログ監視
+
+### 必須作業
+
+* 認証ログ監視
+* 管理者操作監査
+* 異常通信検知
+* 保存期間1年以上（業界による）
+
+---
+
+## ⑦ マルウェア対策
+
+### 必須作業
+
+* EDR導入
+* ウイルス対策更新
+* USB制御
+* マクロ制限
+
+---
+
+## ⑧ メールセキュリティ
+
+### 必須作業
+
+* SPF / DKIM / DMARC設定
+* 添付ファイル検査
+* URLサンドボックス
+
+---
+
+## ⑨ ネットワーク分離
+
+### 必須作業
+
+* 本番／検証分離
+* 社内／外部公開分離
+* 管理系ネットワーク隔離
+
+---
+
+## ⑩ セキュリティ教育
+
+### 必須作業
+
+* 年1回以上の教育
+* 標的型メール訓練
+* インシデント報告手順周知
+
+---
+
+## ■ 技術別チェックリスト（具体）
+
+| 分類    | 最低限必須       |
+| ----- | ----------- |
+| OS    | 自動更新ON      |
+| DB    | 外部公開禁止      |
+| Cloud | 0.0.0.0/0禁止 |
+| S3等   | パブリック遮断     |
+| API   | 認証必須        |
+| Git   | 秘密鍵検出ツール導入  |
+
+---
+
+## ■ 7要素との関係
+
+| 要素    | ハイジーン例 |
+| ----- | ------ |
+| 機密性   | アクセス制御 |
+| 完全性   | パッチ管理  |
+| 可用性   | バックアップ |
+| 真正性   | MFA    |
+| 責任追跡性 | ログ監査   |
+| 否認防止  | 操作証跡   |
+| 信頼性   | 冗長構成   |
+
+---
+
+## ■ 実務での失敗パターン
+
+* パッチは方針だけ存在
+* 退職者IDが放置
+* 管理者MFA未実装
+* バックアップ未検証
+* ログ保存しているだけで未監視
+
+高度なSOCよりも、まずここが崩れます。
+
+---
+
+## ■ 成熟度モデル
+
+| レベル | 状態    |
+| --- | ----- |
+| Lv1 | 未実施   |
+| Lv2 | ルールのみ |
+| Lv3 | 定期実施  |
+| Lv4 | 自動化   |
+| Lv5 | 継続改善  |
+
+---
+
+## ■ 結論
+
+サイバーハイジーンとは
+
+> 「高度な防御ではなく、基本を徹底する文化」
+
+です。
+
+多くの大規模事故は、
+ゼロデイではなく「既知脆弱性放置」から発生します。
+
+---
+
 
