--- a/02_技術/AI/02_AI時代のベクトルデータベース技術.md
+++ b/02_技術/AI/02_AI時代のベクトルデータベース技術.md
@@ -531,4 +531,12 @@ FAQや社内文書に自動でカテゴリやタグを付ける。
 
 ---
 
+## 🌱 開発構築参照例(ソースコードを含む)
+
+[マルチLLM対応AIチャットアプリ](https://github.com/8alfalfa8/freeAiChat)
+
+---
+
+
+
 
