--- a/02_技術/AI/01_AI時代のグラフデータベース技術.md
+++ b/02_技術/AI/01_AI時代のグラフデータベース技術.md
@@ -689,10 +689,11 @@ WHERE {
 
 ---
 
-## 🌱 開発参照例(ソースコードを含む)
+## 🌱 開発構築参照例(ソースコードを含む)
 
 [マルチLLM対応AIチャットアプリ](https://github.com/8alfalfa8/freeAiChat)
 
 ---
+
 
 
