--- a/02_技術/AI/03_AI時代のテキストチャンキング技術.md
+++ b/02_技術/AI/03_AI時代のテキストチャンキング技術.md
@@ -647,4 +647,12 @@ with driver.session() as session:
 
 ---
 
+## 🌱 開発構築参照例(ソースコードを含む)
+
+[マルチLLM対応AIチャットアプリ](https://github.com/8alfalfa8/freeAiChat)
+
+---
+
+
+
 
