--- a/02_技術/AI/05_AIサービス提供時の課題および対策.md
+++ b/02_技術/AI/05_AIサービス提供時の課題および対策.md
@@ -299,3 +299,10 @@ Week4：本番
 | 事業 | 継続課金     |
 
 ---
+
+## 🌱 AI開発構築参照例(ソースコードを含む)
+
+[マルチLLM対応AIチャットアプリ](https://github.com/8alfalfa8/freeAiChat)
+
+---
+
