--- a/02_技術/AI/07_AIサービス30日導入テンプレート.md
+++ b/02_技術/AI/07_AIサービス30日導入テンプレート.md
@@ -265,3 +265,10 @@ AIの役割：
 * 月次改善が前提構造
 
 ---
+
+## 🌱 AI開発構築参照例(ソースコードを含む)
+
+[マルチLLM対応AIチャットアプリ](https://github.com/8alfalfa8/freeAiChat)
+
+---
+
