--- a/02_技術/AI/ベクトルデータベース/01_ベクトルデータベース開発ガイド.md
+++ b/02_技術/AI/ベクトルデータベース/01_ベクトルデータベース開発ガイド.md
@@ -713,3 +713,12 @@ class EmbeddingMigrationPlan:
 - [ ] バックアップとディザスタリカバリ
 
 ベクトルデータベースの開発では、従来のデータベース設計とは異なる考え方が必要です。**ベクトル検索のパフォーマンスを最優先**しつつ、**データ品質の維持**と**スケーラビリティの確保**が成功の鍵となります。特に埋め込みモデルの変更管理と、精度と速度のトレードオフのバランスが重要です。
+
+---
+
+## 🌱 AI開発構築参照例(ソースコードを含む)
+
+[マルチLLM対応AIチャットアプリ](https://github.com/8alfalfa8/freeAiChat)
+
+---
+
