--- a/01_開発/77_新人教育/04_IT企業向け新人教育カリキュラム（3か月版：インフラ特化モデル）.md
+++ b/01_開発/77_新人教育/04_IT企業向け新人教育カリキュラム（3か月版：インフラ特化モデル）.md
@@ -41,7 +41,7 @@
 * インフラエンジニアの役割
 * システム構成要素（NW／OS／MW／HW／Cloud）
 * 開発とインフラの責任分界
-* SLA／SLO／運用保守の考え方
+* SLA(契約)／SLO（目標）／SLI（指標）／運用保守の考え方
 * 情報セキュリティ基礎
 
 #### 成果物
