--- a/04_インフラ/インフラ・セキュリティ部門の組織構成及び役割分担.md
+++ b/04_インフラ/インフラ・セキュリティ部門の組織構成及び役割分担.md
@@ -207,7 +207,7 @@ CIO
 > ✅ **実装・構築作業はインフラ／プラットフォーム部門**<br>
 > ✅ **監視・分析はセキュリティ部門（SOC）**
 
-つまり
+つまり<br>
 👉 **「統制はセキュリティ」「構築はインフラ」**
 が基本原則です。
 
@@ -307,7 +307,7 @@ IBM の QRadar
 * 第2線：統制（セキュリティ）
 * 第3線：監査（内部監査）
 
-実装部門が自分の設定を監視すると
+実装部門が自分の設定を監視すると<br>
 👉 **牽制が効かない**
 
 だから
