--- a/04_インフラ/インフラ・セキュリティ部門の組織構成及び役割分担.md
+++ b/04_インフラ/インフラ・セキュリティ部門の組織構成及び役割分担.md
@@ -208,7 +208,7 @@ CIO
 > ✅ **監視・分析はセキュリティ部門（SOC）**
 
 つまり<br>
-👉 **「統制はセキュリティ」「構築はインフラ」**
+👉 **「統制はセキュリティ」「構築はインフラ」**<br>
 が基本原則です。
 
 具体的に、よく使われるツールを例に役割分担を整理します。
