--- a/04_インフラ/インフラ・セキュリティ部門の組織構成及び役割分担.md
+++ b/04_インフラ/インフラ・セキュリティ部門の組織構成及び役割分担.md
@@ -366,3 +366,173 @@ IBM の QRadar
 です。
 
 ---
+---
+
+# ◆ RACI完全版（役割責任表）
+
+「**セキュリティ独立型**」**前提の RACI 完全版**（**エンタープライズ／金融・公共想定**）を提示します。
+
+---
+
+## ① 前提組織構成
+
+```
+CIO
+ ├─ 開発部（DEV）
+ ├─ インフラ／クラウド基盤（INFRA）
+ └─ セキュリティ統括（CISO配下）
+       ├─ セキュリティアーキテクト（SEC-ARCH）
+       ├─ GRC
+       ├─ SOC
+       └─ CSIRT
+内部監査（AUDIT）
+```
+
+---
+
+## ② RACI定義
+
+| 記号 | 意味                |
+| -- | ----------------- |
+| R  | 実行責任（Responsible） |
+| A  | 最終責任（Accountable） |
+| C  | 事前協議（Consulted）   |
+| I  | 情報共有（Informed）    |
+
+※ Aは原則1部門のみ
+
+---
+
+## ③ RACI完全版（主要セキュリティ領域別）
+
+---
+
+### 1️⃣ セキュリティ方針・標準策定
+
+| 項目           | SEC-ARCH | GRC | INFRA | DEV | SOC | CSIRT | AUDIT |
+| ------------ | -------- | --- | ----- | --- | --- | ----- | ----- |
+| セキュリティポリシー策定 | R        | A   | C     | C   | I   | I     | C     |
+| 技術標準定義       | R        | A   | C     | C   | I   | I     | C     |
+| リスク評価        | C        | R/A | I     | I   | I   | I     | C     |
+
+---
+
+### 2️⃣ IAM（ID管理）
+
+例：Amazon Web Services IAM
+
+| 項目    | SEC-ARCH | INFRA | SOC | GRC | DEV |
+| ----- | -------- | ----- | --- | --- | --- |
+| 権限設計  | R        | C     | I   | A   | C   |
+| IAM実装 | C        | R     | I   | I   | I   |
+| 定期棚卸  | R        | C     | I   | A   | I   |
+
+---
+
+### 3️⃣ ネットワーク／WAF
+
+例：Cloudflare
+
+| 項目       | SEC-ARCH | INFRA | SOC | GRC |
+| -------- | -------- | ----- | --- | --- |
+| WAFルール設計 | R        | C     | C   | A   |
+| WAF適用    | C        | R     | I   | I   |
+| 誤検知分析    | C        | C     | R   | I   |
+
+---
+
+### 4️⃣ EDR
+
+例：CrowdStrike
+
+| 項目       | SEC-ARCH | INFRA | SOC | CSIRT |
+| -------- | -------- | ----- | --- | ----- |
+| 製品選定     | R        | C     | C   | A     |
+| エージェント配布 | C        | R     | I   | I     |
+| アラート分析   | I        | I     | R   | C     |
+| インシデント対応 | C        | C     | C   | R/A   |
+
+---
+
+### 5️⃣ SIEM
+
+例：Splunk
+
+| 項目     | SEC-ARCH | INFRA | SOC | GRC |
+| ------ | -------- | ----- | --- | --- |
+| ログ方針設計 | R        | C     | C   | A   |
+| ログ収集設定 | C        | R     | C   | I   |
+| 監視運用   | I        | I     | R   | I   |
+| 月次報告   | C        | I     | R   | A   |
+
+---
+
+### 6️⃣ 脆弱性管理
+
+| 項目       | SEC-ARCH | INFRA | DEV | SOC | GRC |
+| -------- | -------- | ----- | --- | --- | --- |
+| スキャン基準策定 | R        | C     | C   | I   | A   |
+| スキャン実行   | C        | R     | R   | I   | I   |
+| 修正対応     | C        | R     | R   | I   | I   |
+| 経営報告     | C        | I     | I   | C   | R/A |
+
+---
+
+### 7️⃣ パッチ管理
+
+| 項目    | SEC-ARCH | INFRA | SOC | GRC |
+| ----- | -------- | ----- | --- | --- |
+| パッチ基準 | R        | C     | I   | A   |
+| 適用作業  | C        | R     | I   | I   |
+| 適用確認  | C        | R     | C   | I   |
+
+---
+
+### 8️⃣ インシデント対応
+
+| 項目     | CSIRT | SOC | INFRA | DEV | SEC-ARCH | GRC |
+| ------ | ----- | --- | ----- | --- | -------- | --- |
+| 初動検知   | I     | R   | I     | I   | I        | I   |
+| 重大判定   | R/A   | C   | I     | I   | C        | I   |
+| 技術封じ込め | R     | C   | R     | C   | C        | I   |
+| 経営報告   | C     | C   | I     | I   | I        | R/A |
+
+---
+
+## ④ 重要ポイント（実務で揉める部分）
+
+### 1️⃣ IAM棚卸は誰がAか？
+
+→ GRCがAが望ましい（統制）
+
+### 2️⃣ WAF誤検知は誰がRか？
+
+→ SOCがR
+
+### 3️⃣ インシデント最終責任は？
+
+→ CSIRTがA
+
+---
+
+## ⑤ DevSecOps統合型の場合の変化
+
+* SAST/DASTはDEVがR
+* セキュリティはA
+* 自動チェック結果はSOCがI
+
+---
+
+## ⑥ 理想モデルまとめ
+
+```
+設計 ＝ セキュリティ
+構築 ＝ インフラ／開発
+監視 ＝ SOC
+事故 ＝ CSIRT
+統制 ＝ GRC
+監査 ＝ 内部監査
+```
+
+---
+
